# dftatom_fnp

src/: CMakeLists.txt  constants.mod  dft_data.f90  dft_data.mod  dftatom.f90  drivers.f90  energies.f90  energies.mod  lapack.mod  rdirac.f90  reigen.f90  types.mod  utils.mod
src/finite_nuclear_potential/: calculate_fourier_bessel_rho.f90  const_charge_density.f90  fermi2p_charge_density.f90  fermi3p_charge_density.f90  finite_nuclear_potential.f90  gaussian3p_charge_density.f90  harmonic_oscillator_charge_density.f90  mod_harmonic_oscillator_rho.f90  normalize_rho_log.f90  nuc_pot_log_grid.f90  sum_of_gaussians_nuc_charge_density.f90
